--- a/SignalR/appsettings.json
+++ b/SignalR/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=DESKTOP-P3DJG4F\\SQLEXPRESS;Database=SignalR;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
